--- a/blogicum/templates/includes/header.html
+++ b/blogicum/templates/includes/header.html
@@ -4,9 +4,9 @@
   <nav class="navbar navbar-light" style="background-color: lightskyblue">
     <div class="container">
       <a class="navbar-brand" href={% url 'blog:index' %}>
-        <img 
+        <img
           class="d-inline-block align-top"
-          src={% static 'img/logo.png' %}
+          src="{% static 'img/logo.png' %}"
           width="30"
           height="30"
           alt="Логотип"
@@ -23,7 +23,7 @@
           </a>
         </li>
         <li class="nav-item">
-          <a 
+          <a
             class="nav-link {% if view_name == 'pages:about' %}active{% endif %}"
             href={% url 'pages:about' %}
           >
